--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,9 @@
     --foreground: #ededed;
   }
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   color: var(--foreground);
   background: var(--background);
@@ -25,3 +27,5 @@ body {
     text-wrap: balance;
   }
 }
+
+/* styles/globals.css */
