--- a/app/globals.css
+++ b/app/globals.css
@@ -17,9 +17,10 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  color: var(--foreground);
+  color:black;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
 }
 
 @layer utilities {
